pdfwrite - bug #691653 Regression: /undefined in --run-- with pdfwrite starting with r11667

The underlying problem is related to writing an ICCBased space corresponding
to an Lab space. However, the fallback when this fails does actually work.

The fault was caused by us writing out (and referencing from the page object)
broen Shading, colourpsace and Pattern entries, which were never actually used.

By removing the references from the page (but continuing to emit the broken
objects) 'corrects' this, and other files.

Expected Differences : bug689880.pdf should now work.