gs/base/gdevpdfu.c
@@ -1622,9 +1622,14 @@ pdf_store_page_resources(gx_device_pdf *pdev, pdf_page_t *page, bool clear_usage
         if (s) {
             stream_puts(s, ">>\n");
             pdf_end_separate(pdev, i);
-            if (i != resourceFont)
-                pdf_write_resource_objects(pdev, i);
         }
+        /* If an object isn't used, we still need to emit it :-( This is because
+         * we reserved an object number for it, and the xref will have an entry
+         * for it. If we don't actually emit it then the xref will be invalid.
+         * An alternative would be to modify the xref to mark the object as unused.
+         */
+        if (i != resourceFont)
+            pdf_write_resource_objects(pdev, i);
     }
     page->procsets = pdev->procsets;
     return 0;
